--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -450,6 +450,20 @@
   keywords      = {math.DG, math.AP, math.FA},
 }
 
+@InCollection{MR87i:81237,
+  author     = {Witten, Edward},
+  title      = {Global anomalies in string theory},
+  booktitle  = {Symposium on anomalies, geometry, topology (Chicago, Ill., 1985)},
+  publisher  = {World Sci. Publishing},
+  year       = {1985},
+  pages      = {61--99},
+  address    = {Singapore},
+  bibliodb   = {yes},
+  mrclass    = {81E20 (58B99 58G10)},
+  mrnumber   = {87i:81237},
+  mrreviewer = {Akira Asada},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:/home/andy/ownCloud/bib-cache;}
